# CSVPlotterXY

./: .gitignore  CSVPlotterXY.bat  LICENSE  PlotXY-Py.bat  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
packaging/: CSVPlotterXY.spec  make_icon.py  version_info.txt
plotxy_app/: __init__.py  __main__.py  axis_panel.py  cursor_menu.py  data_model.py  decimate.py  expressions.py  goto_panel.py  main_window.py  measures.py  plot_area.py  project.py  readout_panel.py  series_dialog.py  series_panel.py  session.py  spectrum.py  themes.py
tests/: test_data_model.py  test_decimate.py  test_expressions.py  test_gui_smoke.py  test_measures.py  test_project.py  test_spectrum.py
